--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - pgdata:/var/lib/postresql/data
+      - /var/lib/postresql/data
     
   mongodb:
     image: mongo
@@ -16,11 +16,9 @@ services:
     ports:
       - 27017:27017
     volumes:
-      - mongodata:/data/db
+      - /var/lib/mongodb/data
       
-volumes:
-  pgdata:
-  mongodata:
+
 
   
       
