seed identity data

--- a/src/IdentityService/Properties/launchSettings.json
+++ b/src/IdentityService/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "SelfHost": {
+    "http": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
